--- a/src/components/charInfo/charInfo.scss
+++ b/src/components/charInfo/charInfo.scss
@@ -54,6 +54,10 @@
             line-height: 25px;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             margin-top: 10px;
+            &:hover{
+                box-shadow: 0 5px 20px rgb(255, 215, 0);
+                transform: translateY(-1px);
+            }
         }
     }
     &__select {
