--- a/src/components/charList/charList.scss
+++ b/src/components/charList/charList.scss
@@ -25,10 +25,10 @@
         img {
             width: 200px;
             height: 200px;
-            object-fit: cover;
+            // object-fit: contain;
             transform: translate(-15px, -15px);
         }
-        &_selected {
+        &:hover {
             box-shadow: 0 5px 20px $main-color;
             transform: translateY(-8px);
         }
